--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -145,6 +145,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
@@ -229,25 +230,36 @@ allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 allow 2620:18c:0:192::99;
 allow 2620:18c:0:192::e0:130;
+allow 2620:18c:0:192::e0:131;
+allow 2620:18c:0:192::e0:132;
 allow 2620:18c:0:192::e0:133;
+allow 2620:18c:0:192::e0:134;
 allow 2620:18c:0:192::e0:135;
 allow 2620:18c:0:192::e0:136;
 allow 2620:18c:0:192::e0:137;
 allow 2620:18c:0:192::e0:138;
 allow 2620:18c:0:192::e0:139;
+allow 2620:18c:0:192::e0:140;
+allow 2620:18c:0:192::e0:141;
+allow 2620:18c:0:192::e0:142;
+allow 2620:18c:0:192::e0:143;
 allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:146;
 allow 2620:18c:0:192::e0:147;
+allow 2620:18c:0:192::e0:148;
+allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:150;
 allow 2620:18c:0:192::e0:151;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:154;
 allow 2620:18c:0:192::e0:155;
+allow 2620:18c:0:192::e0:156;
 allow 2620:18c:0:192::e0:157;
 allow 2620:18c:0:192::e0:158;
 allow 2620:18c:0:192::e0:159;
+allow 2620:18c:0:192::e0:160;
 allow 2620:18c:0:192::e0:161;
 allow 2620:18c:0:192::e0:162;
 allow 2620:18c:0:192::e0:163;
@@ -281,17 +293,28 @@ allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
 allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
+allow 2620:18c:0:192::e0:194;
+allow 2620:18c:0:192::e0:195;
 allow 2620:18c:0:192::e0:196;
+allow 2620:18c:0:192::e0:197;
+allow 2620:18c:0:192::e0:198;
+allow 2620:18c:0:192::e0:199;
 allow 2620:18c:0:192::e0:200;
 allow 2620:18c:0:192::e0:201;
 allow 2620:18c:0:192::e0:202;
+allow 2620:18c:0:192::e0:203;
 allow 2620:18c:0:192::e0:204;
 allow 2620:18c:0:192::e0:205;
+allow 2620:18c:0:192::e0:206;
+allow 2620:18c:0:192::e0:207;
+allow 2620:18c:0:192::e0:208;
+allow 2620:18c:0:192::e0:209;
 allow 2620:18c:0:192::e0:210;
 allow 2620:18c:0:192::e0:211;
 allow 2620:18c:0:192::e0:212;
 allow 2620:18c:0:192::e0:213;
 allow 2620:18c:0:192::e0:214;
+allow 2620:18c:0:192::e0:215;
 allow 2620:18c:0:192::e0:216;
 allow 2620:18c:0:192::e0:217;
 allow 2620:18c:0:192::e0:218;
@@ -381,6 +404,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -665,6 +689,7 @@ allow 2a12:a800:11:1:124:198:132:237;
 allow 2a12:a800:11:1:124:198:132:52;
 allow 2a12:a800:11:1:192:159:99:162;
 allow 2a12:a800:11:1:192:159:99:168;
+allow 2a12:a800:11:1:192:159:99:38;
 allow 2a12:a800:11:1:192:159:99:74;
 allow 2a12:a800:1:1:194:26:192:177;
 allow 2a12:a800:1:1:194:26:192:22;
