--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -145,6 +145,7 @@ set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fccf:100:3::14;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -229,25 +230,36 @@ set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
 set_real_ip_from 2620:18c:0:192::e0:130;
+set_real_ip_from 2620:18c:0:192::e0:131;
+set_real_ip_from 2620:18c:0:192::e0:132;
 set_real_ip_from 2620:18c:0:192::e0:133;
+set_real_ip_from 2620:18c:0:192::e0:134;
 set_real_ip_from 2620:18c:0:192::e0:135;
 set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
 set_real_ip_from 2620:18c:0:192::e0:139;
+set_real_ip_from 2620:18c:0:192::e0:140;
+set_real_ip_from 2620:18c:0:192::e0:141;
+set_real_ip_from 2620:18c:0:192::e0:142;
+set_real_ip_from 2620:18c:0:192::e0:143;
 set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:146;
 set_real_ip_from 2620:18c:0:192::e0:147;
+set_real_ip_from 2620:18c:0:192::e0:148;
+set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:151;
 set_real_ip_from 2620:18c:0:192::e0:152;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:18c:0:192::e0:154;
 set_real_ip_from 2620:18c:0:192::e0:155;
+set_real_ip_from 2620:18c:0:192::e0:156;
 set_real_ip_from 2620:18c:0:192::e0:157;
 set_real_ip_from 2620:18c:0:192::e0:158;
 set_real_ip_from 2620:18c:0:192::e0:159;
+set_real_ip_from 2620:18c:0:192::e0:160;
 set_real_ip_from 2620:18c:0:192::e0:161;
 set_real_ip_from 2620:18c:0:192::e0:162;
 set_real_ip_from 2620:18c:0:192::e0:163;
@@ -281,17 +293,28 @@ set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
 set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
+set_real_ip_from 2620:18c:0:192::e0:194;
+set_real_ip_from 2620:18c:0:192::e0:195;
 set_real_ip_from 2620:18c:0:192::e0:196;
+set_real_ip_from 2620:18c:0:192::e0:197;
+set_real_ip_from 2620:18c:0:192::e0:198;
+set_real_ip_from 2620:18c:0:192::e0:199;
 set_real_ip_from 2620:18c:0:192::e0:200;
 set_real_ip_from 2620:18c:0:192::e0:201;
 set_real_ip_from 2620:18c:0:192::e0:202;
+set_real_ip_from 2620:18c:0:192::e0:203;
 set_real_ip_from 2620:18c:0:192::e0:204;
 set_real_ip_from 2620:18c:0:192::e0:205;
+set_real_ip_from 2620:18c:0:192::e0:206;
+set_real_ip_from 2620:18c:0:192::e0:207;
+set_real_ip_from 2620:18c:0:192::e0:208;
+set_real_ip_from 2620:18c:0:192::e0:209;
 set_real_ip_from 2620:18c:0:192::e0:210;
 set_real_ip_from 2620:18c:0:192::e0:211;
 set_real_ip_from 2620:18c:0:192::e0:212;
 set_real_ip_from 2620:18c:0:192::e0:213;
 set_real_ip_from 2620:18c:0:192::e0:214;
+set_real_ip_from 2620:18c:0:192::e0:215;
 set_real_ip_from 2620:18c:0:192::e0:216;
 set_real_ip_from 2620:18c:0:192::e0:217;
 set_real_ip_from 2620:18c:0:192::e0:218;
@@ -381,6 +404,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -665,6 +689,7 @@ set_real_ip_from 2a12:a800:11:1:124:198:132:237;
 set_real_ip_from 2a12:a800:11:1:124:198:132:52;
 set_real_ip_from 2a12:a800:11:1:192:159:99:162;
 set_real_ip_from 2a12:a800:11:1:192:159:99:168;
+set_real_ip_from 2a12:a800:11:1:192:159:99:38;
 set_real_ip_from 2a12:a800:11:1:192:159:99:74;
 set_real_ip_from 2a12:a800:1:1:194:26:192:177;
 set_real_ip_from 2a12:a800:1:1:194:26:192:22;
