--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -207,6 +207,7 @@ allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
+allow 178.17.170.31;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -891,7 +892,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -899,6 +899,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
@@ -1153,6 +1154,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:7a::7865;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
@@ -1777,6 +1779,7 @@ allow 57.128.220.107;
 allow 57.129.91.235;
 allow 62.133.45.2;
 allow 62.133.60.208;
+allow 62.169.23.158;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
