--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -207,6 +207,7 @@ deny 177.93.140.66;
 deny 178.162.175.5;
 deny 178.17.170.144;
 deny 178.17.170.23;
+deny 178.17.170.31;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -891,7 +892,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -899,6 +899,7 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
@@ -1153,6 +1154,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:7a::7865;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
@@ -1777,6 +1779,7 @@ deny 57.128.220.107;
 deny 57.129.91.235;
 deny 62.133.45.2;
 deny 62.133.60.208;
+deny 62.169.23.158;
 deny 62.171.137.169;
 deny 62.182.84.146;
 deny 62.72.47.105;
