--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -341,6 +341,7 @@ set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
+set_real_ip_from 2a00:1dc0:caff:7a::7865;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:1dc0:caff:f4::bad5;
 set_real_ip_from 2a00:74a0:e000:1003::114;
