--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -901,7 +901,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1244,6 +1243,7 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
+allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1586,6 +1586,7 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
+allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
