--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -144,6 +144,7 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
+set_real_ip_from 157.66.25.92;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 160.187.148.71;
 set_real_ip_from 161.129.68.162;
@@ -236,6 +237,7 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
+set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.24;
